# Services/Core/Presentation/routes.js
@@ -3,6 +3,7 @@ import morgan from "morgan";
 import posts from "./routes/post.js";
 import reports from "./routes/report.js";
 import followings from "./routes/following.js";
+import notifs from "./routes/notif.js"
 import error from "../middlewares/error.js";
 import cors from "../middlewares/cors.js";
 import logger from "../utilities/loggers/generalLogger.js";
@@ -26,6 +27,7 @@ export default function(app) {
     app.use("/post", posts);
     app.use("/report", reports);
     app.use("/following", followings);
+    app.use("/notif", notifs);
 
     app.get("/test",auth,(req,res) => {
         return res.json(req.user);
